# verdant

./: .gitignore  Cargo.toml  README.md  _prepare_ci.sh  crates.js  grammars-mapping-filetypes.json  help.html  settings.html  src-files.js
examples/wasm/wasm-pack/: Cargo.toml  README.md
syntastica-core/: Cargo.toml  README.md
syntastica-core/src/: error.rs  language_set.rs  lib.rs  theme.rs  theme_keys.rs
syntastica-core/src/language_set/: union.rs
syntastica-highlight/: Cargo.toml  README.md
syntastica-highlight/src/: lib.rs
syntastica-js/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  typedoc.json
syntastica-js/langs/: README.md
syntastica-js/langs/ada/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/agda/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/apex/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/arduino/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/asm/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/asm68k/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/astro/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/authzed/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/awk/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/bash/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/bass/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/beancount/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/bib/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/bibtex/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/bicep/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/bitbake/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/blade/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/blueprint/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/bp/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/bpftrace/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/brightscript/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/bzl/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/c/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/c3/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/c_sharp/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/caddy/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/cairo/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/capnp/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/chatito/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/circom/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/clarity/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/clojure/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/cmake/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/comment/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/cook/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/corn/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/cpon/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/cpp/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/csharp/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/css/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/csv/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/cuda/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/cue/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/cylc/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/d/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/dart/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/desktop/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/dhall/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/diff/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/disassembly/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/djot/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/dockerfile/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/dot/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/doxygen/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/dtd/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/dts/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/earthfile/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/ebnf/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/editorconfig/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/eds/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/eelixir/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/ejs/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/elisp/: Cargo.toml  README.md  build.rs  package.json
syntastica-js/langs/elixir/: Cargo.toml  (+3 more)
syntastica-js/src/: index.ts  lib.rs  main.rs  verdant-js.d.ts
syntastica-queries/: Cargo.toml  README.md
syntastica-queries/src/: lib.rs
syntastica-themes/: Cargo.toml  README.md  theme_list.md
syntastica-themes/src/: abscs.rs  aurora.rs  blue_moon.rs  boo.rs  catppuccin.rs  darcula.rs  dracula.rs  everblush.rs  everforest.rs  falcon.rs  github.rs  gruvbox.rs  lib.rs  melange.rs  minimal.rs  monochrome.rs  monokai.rs  moonfly.rs  moonlight.rs  neon.rs  nightfly.rs  nord.rs  oceanicnext.rs  omni.rs  one.rs  oxocarbon.rs  solarized.rs  tokyo.rs  vscode.rs  zephyr.rs
(+9310 files in other folders)
