[package]
name = "syntatica-queries"
version.workspace = true
authors.workspace = true
documentation = "https://casualjim.github.io/syntastica/syntatica_queries/"
edition.workspace = true
include = ["LICENSE", "README.md", "src", "generated_queries"]
license.workspace = true
repository.workspace = true
description = "Collection of tree-sitter queries for syntastica"

[lints]
workspace = true

[dependencies]

[package.metadata.docs.rs]
all-features = true
