[package]
name = "cj-syntastica-queries"
version.workspace = true
authors.workspace = true
documentation = "https://casualjim.github.io/syntastica/cj_syntastica_queries/"
edition.workspace = true
include = ["LICENSE", "README.md", "src", "generated_queries"]
license.workspace = true
repository.workspace = true
description = "Collection of tree-sitter queries for syntastica"

[lints]
workspace = true

[dependencies]

[package.metadata.docs.rs]
all-features = true
