[workspace]

[package]
name = "syntastica-wasm-pack"
version = "0.1.0"
authors = ["RubixDev <silas.groh@t-online.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
verdant = { version = "0.7.0", path = "../../..", default-features = false }
verdant-parsers-git = { version = "0.7.0", path = "../../../syntastica-parsers-git", default-features = false, features = ["rust"] }
verdant-themes = { version = "0.7.0", path = "../../../syntastica-themes", default-features = false }

js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console", "Document", "Element", "HtmlElement", "Node", "Window"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
