[package]
name = "syntatica-js-hack"
version.workspace = true
authors.workspace = true
documentation = "https://casualjim.github.io/syntastica/syntatica_js/"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hack language support for syntatica-js"

[lib]
crate-type = ["cdylib"]

[dependencies]
syntastica-macros = { workspace = true, features = ["js"] }
syntastica-queries.workspace = true

tree-sitter.workspace = true

[build-dependencies]
syntastica-macros = { workspace = true, features = ["js"] }

cc.workspace = true
tree-sitter-generate.workspace = true
