[package]
name = "cj-syntastica-js-javadoc"
version.workspace = true
authors.workspace = true
documentation = "https://casualjim.github.io/syntastica/cj_syntastica_js/"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Javadoc language support for cj-syntastica-js"

[lib]
crate-type = ["cdylib"]

[dependencies]
syntastica-macros = { workspace = true, features = ["js"] }
syntastica-queries.workspace = true

tree-sitter.workspace = true

[build-dependencies]
syntastica-macros = { workspace = true, features = ["js"] }

cc.workspace = true
tree-sitter-generate.workspace = true
