[package]
name = "verdant-js-sparql"
version.workspace = true
authors.workspace = true
documentation = "https://rubixdev.github.io/syntastica/syntastica_js/"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sparql language support for verdant-js"

[lib]
crate-type = ["cdylib"]

[dependencies]
verdant-macros = { workspace = true, features = ["js"] }
verdant-queries.workspace = true

tree-sitter.workspace = true

[build-dependencies]
verdant-macros = { workspace = true, features = ["js"] }

cc.workspace = true
tree-sitter-generate.workspace = true
