[package]
name = "verdant-js-tsx"
version.workspace = true
authors.workspace = true
documentation = "https://rubixdev.github.io/syntastica/syntastica_js/"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tsx language support for syntastica-js"

[lib]
crate-type = ["cdylib"]

[dependencies]
verdant-macros = { workspace = true, features = ["js"] }
verdant-queries.workspace = true

tree-sitter.workspace = true

[build-dependencies]
verdant-macros = { workspace = true, features = ["js"] }

cc.workspace = true
tree-sitter-generate.workspace = true
